--- a/dev/helmrelease.yaml
+++ b/dev/helmrelease.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: tournament-ss
-  namespace: default
+  namespace: dev
 spec:
   releaseName: tournament-ss-prod
   chart:
@@ -25,13 +25,13 @@ spec:
           value: "postgres"
         - name: DB_NAME
           value: "sensation"
-    #    frontend:
-    #      enabled: true
-    #      image: "ghcr.io/belkanaphan-sensation/tournament-frontend:0.0.1-SNAPSHOT"
-    #      replicaCount: 1
-    #      port: 80
+    frontend:
+      enabled: false
+      image: "ghcr.io/belkanaphan-sensation/tournament-frontend:0.0.1-SNAPSHOT"
+      replicaCount: 1
+      port: 80
     pgadmin:
-      enabled: true
+      enabled: false
       image: "dpage/pgadmin4:latest"
       replicaCount: 1
       port: 80
