--- a/dev/helmrelease.yaml
+++ b/dev/helmrelease.yaml
@@ -7,8 +7,12 @@ spec:
   releaseName: tournament-ss-prod
   chart:
     spec:
-      chart: tournament-ss-chart
-      version: 0.0.1
+      chart: chart
+      version: 0.1.0
+      sourceRef:
+        kind: HelmRepository
+        name: tournament-chart
+        namespace: flux-system
   interval: 30m
   values:
     tournament:
