--- a/dev/helmrelease.yaml
+++ b/dev/helmrelease.yaml
@@ -7,7 +7,7 @@ spec:
   releaseName: tournament-ss-prod
   chart:
     spec:
-      chart: chart
+      chart: ./
       version: 0.1.0
       sourceRef:
         kind: HelmRepository
