--- a/prod/helmrelease.yaml
+++ b/prod/helmrelease.yaml
@@ -7,7 +7,7 @@ spec:
   releaseName: tournament
   chart:
     spec:
-      chart: chart
+      chart: ./
       version: 0.1.0
       sourceRef:
         kind: GitRepository
